fix: fallback using videos with alpha support on iOS

--- a/src/sass/base/reset.sass
+++ b/src/sass/base/reset.sass
@@ -281,6 +281,7 @@ video
 button,
 input
   line-height: normal
+  color: inherit
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
